@@ -20,12 +20,11 @@ package org.nuxeo.labs.asset.transformation.pub.endpoint;
 
 import java.util.List;
 
-import javax.ws.rs.GET;
-import javax.ws.rs.Path;
-import javax.ws.rs.PathParam;
-import javax.ws.rs.Produces;
-import javax.ws.rs.QueryParam;
-import javax.ws.rs.core.Response;
+import jakarta.ws.rs.GET;
+import jakarta.ws.rs.Path;
+import jakarta.ws.rs.PathParam;
+import jakarta.ws.rs.QueryParam;
+import jakarta.ws.rs.core.Response;
 
 import org.apache.logging.log4j.LogManager;
 import org.apache.logging.log4j.Logger;
@@ -48,7 +47,6 @@ import org.nuxeo.runtime.api.Framework;
  */
 @Path("/public/transform")
 @WebObject(type = "publicTransform")
-@Produces("text/html;charset=UTF-8")
 public class Transform {
 
     private static final Logger log = LogManager.getLogger(Transform.class);
@@ -89,7 +87,7 @@ public class Transform {
             String key = document.getId() + transformation;
             store.putBlobs(key, List.of(renditionBlob));
             store.setCompleted(key, true);
-            return store.getBlobs(key).get(0);
+            return store.getBlobs(key).getFirst();
         });
     }
 
